--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -8,33 +8,7 @@
     <title>lhsNote</title>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: rgb(127, 187, 255);
-        }
-
-        .panel {
-            width: 210x !important;
-            margin: 20px !important;
-        }
-
-        #edit-icon {
-            opacity: 0.5 !important;
-        }
-
-        #edit-icon:hover {
-
-            opacity: 2 !important;
-        }
-
-        .glyphicon-trash {
-            opacity: 0.6 !important;
-        }
-
-        .glyphicon-trash:hover {
-            opacity: 1 !important;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/s/css/index.css">
 </head>
 
 <body>
@@ -46,15 +20,8 @@
 
                 <div class="dropdown"" style="margin:0;padding:0;float:right">
                     <img class="img-responsive img-circle  dropdown-toggle"width="50px" height="50px" src="/s/images/avator.jpeg" data-toggle="dropdown"/>
-                    <ul  class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1" style="min-width:10%;" 
-                    onclick='$.post("/logout_cgi",function(json){                      
-                            if(json.ret == 0){
-                                window.location.href="/login";
-                            }else{
-                                alert("退出失败，请重试！")
-                            }
-                        },"json")'>
-                      <li id="logout" role="presentation"><a role="menuitem" tabindex="-1" href="#" >退出 &nbsp<span class="glyphicon glyphicon-off" style="margin-right:-2px;"></span></a></li>
+                    <ul  class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1" style="min-width:10%">
+                      <li id="logout" role="presentation"><a style="outline:none!important;" role="menuitem" tabindex="-1" href="#" >退出 &nbsp<span class="glyphicon glyphicon-off" style="margin-right:-2px;"></span></a></li>
                     </ul>
                 </div>
                 <h4 id="nickname" style="color:white">HS鬼</h4>
@@ -154,24 +121,7 @@
         <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
         <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                $("[data-toggle='popover']").popover();
-                    function logout(){
-
-                        alert("test")
-                        var url='/logout_cgi';
-                        $.post(url,function(json){                      
-                            if(json.ret == 0){
-                                window.location.href="/login";
-                            }else{
-                                alert("退出失败，请重试！")
-                            }
-                        },'json')
-                    }
-            }
-
-        </script>
+        <script type="text/javascript" src="/s/js/index.js"></script>
 </body>
 
 </html>
