--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -36,25 +36,25 @@
                 <div class="panel pull-left " style="height: 210px  !important;width:210px !important">
                     <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
                         style="float: right;padding:12px !important;"></i></div>
-                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                    <hr style="margin-bottom:0px; filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499" 
                         size="10" />
-                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:165px;padding:0;margin:0;"></a>
                 </div>
 
                 <div class="panel pull-left" style="height: 210px  !important;width:210px !important">
                     <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
                         style="float: right;padding:12px !important;"></i></div>
-                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                    <hr style="margin-bottom:0px; filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
                         size="10" />
-                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:165px;padding:0;margin:0;"></a>
                 </div>
 
                 <div class="panel pull-left" style="height: 210px  !important;width:210px !important">
                     <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
                             style="float: right;padding:12px !important;"></i></div>
-                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                    <hr style="margin-bottom:0px; filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
                         size="10" />
-                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:165px;padding:0;margin:0;"></a>
                 </div>
 
 
@@ -89,11 +89,11 @@
                                     <div class="modal-header">
                                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                         <h4 class="modal-title" id="myModalLabel">
-                                            笔记标题
+                                            <input placeholder="笔记标题" type="text" style="outline:none;width:100%;border:0"> 
                                         </h4>
                                     </div>
                                     <div class="modal-body">
-                                        编辑内容...
+                                        <textarea placeholder="编辑内容..." type="text" style="outline:none;resize: none;overflow:hidden;border:0;width:100%;height:180px"></textarea>
                                     </div>
                                     <div class="modal-footer navbar-fixed-bottom">
                                          
