--- a/src/web/lnote/templates/regist.html
+++ b/src/web/lnote/templates/regist.html
@@ -50,7 +50,7 @@
 
                                                     <div class="form-group">
                                                          <label for="exampleInputNickname1" style="opacity: 0.5 !important;">昵称 </label>
-                                                         <input name="nickname" required type="nickname" class="form-control " id="exampleInputNickname1" />
+                                                         <input name="nickname" required type="text" class="form-control " id="exampleInputNickname1" />
 
                                                          
                                                     </div>
