--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -56,8 +56,6 @@
                         size="10" />
                     <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:165px;padding:0;margin:0;"></a>
                 </div>
-
-
             </div>
         </div>
         <!-- 确认删除弹窗 -->
@@ -108,11 +106,9 @@
                       <!-- 添加笔记弹窗结束   -->
                 <div style="text-align:center" class="navbar-fixed-bottom">
 
-                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="/s/images/加号.png" /></a>
-                    
-                    
-
-
+                        <a id="add_note" href="#modal-container-523565" role="button" class="btn" data-toggle="modal">
+                            <img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="/s/images/加号.png" />
+                        </a>
 
                     </div>
                 </div>
